[package]
name = "aeflot"
version = "0.1.0"
authors = ["simens_green <simensgreen007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.62", features = ["derive"] }
serde_json = "1.0.62"
